--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,8 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript Books</title>
+    <!-- Bootstrap v5.0.0-->
+    <link href="https://bootswatch.com/4/cosmo/bootstrap.min.css" rel="stylesheet" >
+    <!-- Animate css -->
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
 </head>
 <body>
-    <h1>It works!!!</h1>
+    <nav class="navbar navbar-dark bg-dark">
+        <div class="container">
+            <a href="/" class="navbar-brand">Books App</a>
+        </div>
+    </nav>
+
+    <div class="container p-4">
+        <div class="row">
+            <div class="col-md-4">
+                <form id="book-form" class="card card-body">
+                    <div class="form-group">
+                        <input type="text" name="title" class="form-control" placeholder="Book Title" autofocus>
+                    </div>
+                    <div class="form-group">
+                        <input type="text" name="author" class="form-control" placeholder="Author">
+                    </div>
+                    <div class="form-group">
+                        <input type="text" name="isbn" class="form-control" placeholder="ISBN">
+                    </div>
+                    <div class="input-group mb-3">
+                        <div class="custom-file">
+                            <input type="file" class="custom-file-input" id="image">
+                            <label for="image" class="custom-file-label">Choose Image</label>
+                        </div>
+                    </div>
+                    <button class="btn btn-primary">
+                        Save Book
+                    </button>
+                </form>
+            </div>
+            <div class="col-md-8" id="books-cards">
+                
+            </div>
+        </div>
+    </div>
 </body>
 </html>
